--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 @layer base {
   :root {
-    --radius: 0.5rem
+    --radius: 0.5rem;
   }
+}
+.default-padding {
+  padding: 10px;
 }
